# zerosum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  frontier.sh  go-cuda.sh  go-intel.sh  go.sh  job-frontier.sh  job-sunspot.sh  sourceme.sh
.circleci/: config.yml
cmake/: AddGitSubmodule.cmake  FindLM_SENSORS.cmake  FindOMPT.cmake
examples/: CMakeLists.txt  crasher.c  deadlock.cpp  example_utils.hpp  hip_test.cpp  main.cpp  pthread.cpp  random_walk.cpp  server.cpp  sycl_query.cpp
sample_data/: zs-topology.html  zs.data.0.csv  zs.data.1.csv  zs.data.2.csv  zs.data.3.csv  zs.topology.saturn.json
scripts/: build-aurora.sh  build-frontier.sh  build-gilgamesh.sh  build-intel.sh  build-perlmutter.sh  build-polaris-sycl.sh  build-saturn.sh  build-sunspot.sh  build-voltar-likwid.sh  build-voltar.sh  foo.sh  go-cuda.sh  go-hip.sh  job-aurora.sh  job-frontier.sh  job-perlmutter.sh  job-polaris-sycl.sh  job-sunspot.sh  sourceme-aurora.sh  sourceme-frontier.sh  sourceme-perlmutter.sh  sourceme-polaris-sycl.sh  sourceme-saturn.sh  sourceme-sever.sh  sourceme-sunspot.sh  sunspot-interactive.sh  trees.py
src/: CMakeLists.txt  banner.h  cray_pm_counters.cpp  cray_pm_counters.h  error_handling.cpp  error_handling.h  global_constructor_destructor.h  hardware.h  hwloc.cpp  hwloc_zs.h  level0_utils.h  lm_sensor_data.cpp  lm_sensor_data.h  mpi_p2p_merge.cpp  nvml.cpp  nvml_zs.h  oneapi.cpp  perfstubs.h  preload.cpp  rocm_smi.cpp  rocm_smi.h  rocmsmi.cpp  rocmsmi.h  software.h  sycl.cpp  sycl_zs.h  topology.h  utils.cpp  utils.h  zerosum  zerosum-mpi  zerosum.cpp  zerosum.h  zerosum_cuda.cpp  zerosum_cuda.cu  zerosum_hip.cpp  zerosum_mpi.cpp  zerosum_nogpu.cpp  zerosum_oneapi.cpp  zerosum_openmp.cpp  (+5 more)
src/post-processing/: CMakeLists.txt  ctx.py  heatmap.all_in_one.py  heatmap.py  hwloc-template-standalone.html  hwloc-template.html  hwloc_util.py  hwt.py  lwp.py  mmm.py  mpi_p2p_merge.cpp  sparklines.py  time-series.py  trees.py  zs-stacks.py
